--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -11,10 +11,12 @@ body {
 
 .title {
   background: #e3f4ff;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px
 }
 
 .button-container {
@@ -24,4 +26,6 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
+padding: 16px;
+
 }
