--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -3,25 +3,40 @@ body {
   font-family: sans-serif;
 }
 
+*{
+  margin: 8px;
+}
+
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 4px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 16px;
+  font-size: 20px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 6px;
+  text-align: center;
 }
 
 button {
-  background: white;
-  border: 1px solid #eee;
+  display: block;
+  margin: auto;
+  padding: 8px;
+  width: 120px;
+  border: transparent;
+  background-color: white;
 }
