--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,20 @@ a {
 ul {
   list-style-type: none;
 }
+
+
+.header{
+  padding: 8px;
+}
+.header, .left, .right, ul{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+
+}
