--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,19 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+
+.plants{
+  justify-content: center;
+  display: flex;
+  margin: 32px;
+  gap: 52px;
+}
+.details{
+
+  max-width: 200px;
+}
+
+body{
+  text-align: center;
+}
