--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,25 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
+
+.modal{
+  display: flex;
+  gap: 16px;
+  padding: 16px;
+}
+.icon{
+  flex-shrink: 0;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  font-weight: 900;
+  align-items: center;
+  margin-bottom: 8px;
+  font-size: 22px;
+}
+.text{
+  margin-bottom: 8px;
+}
