--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -24,3 +24,45 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between; 
+  background-color: #eeeeee;
+  padding: 16px;
+}
+.left-links{
+  display: flex;
+}
+.right-links{
+  display: flex;
+}
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+ul{
+  gap: 16px;
+}
+a{
+  text-decoration: none;
+  color: #666;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  gap: 16px;
+}
+body{
+  display: flex;
+  flex-direction: column;
+}
+button {
+  padding: 8px 16px;
+}
