--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
 }
@@ -26,4 +25,59 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+
+
+
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+.header{
+  font-size: 32px;
+  font-weight: 900;
+  align-content: center;
+  padding: 16px;
+}
+.content{
+  display: flex;
+  flex: 1;
+}
+.sidebar{
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+  padding: 16px;
+  font-size: 24px;
+}
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+a{
+  text-decoration: none;
+  color: #eee;
+}
+.cards{
+  display: flex;
+  padding: 48px;
+  flex-wrap: wrap;
+  flex: auto;
+}
+.card{
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
+
+}
+.footer{
+  align-content: center;
+  text-align: center;
+}
+li{
+  margin-bottom: 8px;
 }
